--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ bld/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
+.vs/*
+dataset/*
+users/*
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
